object group can not be deleted after created #41343

Closed
opened 2014-08-06 16:43:10 +02:00 by yellow foxz · 12 comments

System Information
win 7 i5

Blender Version
2.71

Short description of error
object group can not be deleted after created

Exact steps for others to reproduce the error
select object and press ctrl and g for grouping....then at group tab try to delete it.....can not be permanently deleted..
Capture.PNG

untitled.blend

**System Information** win 7 i5 **Blender Version** 2.71 **Short description of error** object group can not be deleted after created **Exact steps for others to reproduce the error** select object and press ctrl and g for grouping....then at group tab try to delete it.....can not be permanently deleted.. ![Capture.PNG](https://archive.blender.org/developer/F101650/Capture.PNG) [untitled.blend](https://archive.blender.org/developer/F101652/untitled.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yellowfoxz

Added subscriber: @yellowfoxz

Added subscriber: @jefrau

Added subscriber: @jefrau

Are you sure you can permanently remove a group with Shift + Left Click? I'm really not sure this can be done this way.

Blender maintains this information in memory, I do not know if it can be removed with Shift + Left Click.

Is there any reference in Wiki about using Shift + Left Click to remove groups permanently?

Are you sure you can permanently remove a group with Shift + Left Click? I'm really not sure this can be done this way. Blender maintains this information in memory, I do not know if it can be removed with Shift + Left Click. Is there any reference in Wiki about using Shift + Left Click to remove groups permanently?
Author

no basicly shift and left click is permanent delete for texture and just try to remove group...because there is no way to permanent delete the groups already created .. .. this is a bug.!...

no basicly shift and left click is permanent delete for texture and just try to remove group...because there is no way to permanent delete the groups already created .. .. this is a bug.!...

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This x icon is misleading, it looks like an ID unlink button but it's a actually an operator. (Hovering over the button and spawning a tooltip actually tells you this, while hovering over an ID button will tell you that you can unlink completely with shift).

The only way to unlink a group is basically through the outliner.

The problem here is that we don't have a list of groups per object so we can't really use an ID template. Detecting a shift key can only be done by setting a callback in C so I'm not sure this can be fixed in python.

Might work by writing a new operator that checks for shift on windowmanager when called and decides accordingly, but that is a somewhat hacky way of doing it. @ideasman42, any opinions here?

This x icon is misleading, it looks like an ID unlink button but it's a actually an operator. (Hovering over the button and spawning a tooltip actually tells you this, while hovering over an ID button will tell you that you can unlink completely with shift). The only way to unlink a group is basically through the outliner. The problem here is that we don't have a list of groups per object so we can't really use an ID template. Detecting a shift key can only be done by setting a callback in C so I'm not sure this can be fixed in python. Might work by writing a new operator that checks for shift on windowmanager when called and decides accordingly, but that is a somewhat hacky way of doing it. @ideasman42, any opinions here?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is currently working as intended, but agree having a way to remove group could be good.

The way groups work now:

  • They are kept as long as objects use them.
  • They can be unlinked from the outliner (RMB Unlink)

the object buttons are only meant to handle group operations on that object, when it comes to adding/removing.

perhaps a drop-down could be added next to the - [x], with a menu for extra operations (Select All, Unlink All)

This is currently working as intended, but agree having a way to remove group could be good. The way groups work now: - They are kept as long as objects use them. - They can be unlinked from the outliner (RMB Unlink) the object buttons are only meant to handle group operations on that object, when it comes to adding/removing. perhaps a drop-down could be added next to the - [x], with a menu for extra operations (Select All, Unlink All)

This issue was referenced by ef68faa2f9

This issue was referenced by ef68faa2f991d257107c1ab7a4e9c6dac9180e95

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ef68faa2f9.

Closed by commit ef68faa2f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41343
No description provided.